# Distributed-Training-System

./: Cargo.toml  README.md  sample_job.toml  sample_job_checkpoint_stress.toml
crates/common/: Cargo.toml  build.rs
crates/common/src/: lib.rs  main.rs
crates/coordinator/: Cargo.toml  build.rs
crates/coordinator/src/: client.rs  config.rs  controller.rs  main.rs
crates/storage/src/: lib.rs
crates/worker-agent/: Cargo.toml
crates/worker-agent/src/: agent.rs  client.rs  main.rs
proto/: agent.proto  common.proto  helloworld.proto  orchestrator.proto
python-trainer/: main.py
