
[package]
name = "worker-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
prost-types = "0.12"
clap = { version = "4", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12.3"

[[bin]]
name = "worker-agent"
path = "src/main.rs"
